[package]
name = "zuc"
version = "0.4.1"
edition = "2021"
description = "ZUC Stream Cipher Algorithms"
license = "MIT"
repository = "https://github.com/Nugine/zuc"
readme = "README.md"
documentation = "https://docs.rs/zuc"
categories = ["cryptography"]
keywords = ["zuc", "eea", "eia", "stream-cipher", "crypto"]
rust-version = "1.83.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cipher = "0.4.4"
const-str = "0.6.2"
digest = { version = "0.10.7", features = ["mac"] }
numeric_cast = "0.3.0"
std-next = "0.1.8"

[dev-dependencies]
criterion = "0.6.0"
rand = "0.9.1"

[[bench]]
name = "zuc"
harness = false
